--- a/css/general/menu.css
+++ b/css/general/menu.css
@@ -1,4 +1,6 @@
 @import url("fonts.css");
+@import url("scroll.css");
+@import url("dark.css");
 
 *{
     margin: 0;
@@ -7,9 +9,13 @@
     text-decoration: none;
 }
 
+body{
+    transition: all .5s ease-in-out;
+}
+
 header{
     width: 100%;
-    height: 100px;
+    height: 80px;
     font-family: 'Poppins', sans-serif;
     position: fixed;
     top: 0;
@@ -21,7 +27,7 @@ header{
 
 
 .move_content{
-    right: 180px;
+    right: 200px;
 }
 
 .container__header{
@@ -77,6 +83,7 @@ header .logo{
 .nav_menu .container_menu .texto_menu a{
     color: black;
     font-size: 14px;
+    text-decoration: none;
 }
 
 .nav_menu .container_menu .texto_menu a:hover{
@@ -90,7 +97,7 @@ header .logo{
     font-size: 20px;
     border: 2px solid #359EF9;
     font-weight: 700;
-    background: white;
+    background: transparent;
     padding: 10px 30px;
     color: #359EF9;
     border-radius: 20px;
@@ -103,7 +110,7 @@ header .logo{
 }
 
 .nav_mod{
-    height: 70px;
+    height: 80px;
     box-shadow: 10px 1px 10px 10px #00000010;
     background: white;
 }
@@ -127,6 +134,13 @@ header .logo{
 }
 
 /*Footer*/
+.footer{
+    margin: 50px  0 0 0;
+    background-color: #24262b;
+    padding: 50px 0;
+    cursor: default;
+}
+
 .container-footer{
     max-width: 1170px;
     margin: auto;
@@ -142,12 +156,6 @@ header .logo{
 
 .container-footer ul{
     list-style: none;
-}
-
-.footer{
-    background-color: #24262b;
-    padding: 50px 0;
-    cursor: default;
 }
 
 .footer-column{
@@ -185,7 +193,6 @@ header .logo{
     color: #ffffff;
     text-decoration: none;
     font-weight: 300;
-    display: block;
     transition: all 0.3s ease;
 }
 
@@ -228,7 +235,7 @@ header .logo{
 }
 
 /*RESPONSIVE*/
-@media screen and (max-width: 795px){
+@media screen and (max-width: 800px){
     .container__header .btn__menu{
         display: flex;
         justify-content: right;
@@ -251,7 +258,7 @@ header .logo{
         background: #F1FAFF;
         position: fixed;
         top: 0;
-        right: -200px;
+        right: -220px;
         padding: 0 40px;
         transition: all 300ms;
     }
@@ -269,44 +276,24 @@ header .logo{
     }
 
     .footer{
-        width: 360px;
+        width: 100%;
     }
 
     .container-footer{
-        text-align: center
+        padding: 0 55px;
     }
 
-    .footer-column h4::before{
-        content: '';
-        margin: 0 42%;
-        position: absolute;
-        left: 0;
-        bottom: -10px;
-        background-color: #e91e63;
-        height: 2px;
-        box-sizing: border-box;
-        width: 50px;
+    .container-footer .footer-column h4{
+        color: #e91e63;
+    }
+
+    .container-footer .footer-column h4::before{
+        content: initial;
     }
 }
 
 
 /*Footer Responsive*/
-@media screen and (max-width: 795px){
-    .footer{
-        width: 100%;
-    }
-
-    .footer-column{
-        width: 100%;
-        margin-bottom: 30px;
-        display: initial;
-    }
-
-    .footer-column h4::before{
-        margin: 0 45%;
-    }
-}
-
 @media screen and (max-width: 575px){
     .logo .logito{
         width: 25px;
@@ -322,11 +309,6 @@ header .logo{
 
     .footer-column{
         width: 100%;
-    }
-
-    .footer-column h4::before{
-        align-items: center;
-        justify-content: center;
     }
 }
 
@@ -349,23 +331,10 @@ header .logo{
 
 }
 
-@media screen and (max-width: 260px){
-    .footer{
-        width: 150%;
-    }
-
-    .footer-column h4::before{
-        margin: 0 42%;
-    }
-}
 
 @media screen and (max-width: 205px){
     .footer{
         width: 250%;
-    }
-
-    .footer-column h4::before{
-        margin: 0 42%;
     }
 }
 
