--- a/css/inicio/inicio.css
+++ b/css/inicio/inicio.css
@@ -6,7 +6,6 @@
     transition: all 300ms;
     cursor: default;
 }
-
 .cover{
     width: 100%;
     padding-bottom: 60px;
@@ -61,41 +60,9 @@
     overflow: hidden;
 }
 
-.container__cover ul{
-    display: flex;
-    padding: 0;
-    width: 400%;
-
-    animation: cambio 12s infinite;
-    animation-direction: alternate;
-    animation-timing-function: ease-in-out;
-    /*animation-timing-function: cubic-bezier(0.1, 0.7, 1.0, 0.1);*/
-    /*animation-timing-function: cubic-bezier(.86, -1.15, .48, 1.68);*/
-}
-
-.container__cover li{
-    list-style: none;
+.container__vector img{
     width: 100%;
 }
-
-.container__cover img{
-    width: 100%;
-}
-
-@keyframes cambio {
-    0%{margin-left: 0;}
-    20%{margin-left: 0;}
-
-    25%{margin-left: -100%;}
-    45%{margin-left: -100%;}
-
-    50%{margin-left: -200%;}
-    70%{margin-left: -200%;}
-
-    75%{margin-left: -300%;}
-    100%{margin-left: -300%;}
-}
-
 /***********************************************************/
 /*TARJETAS*/
 .contenido-tarjetas h1{
@@ -104,10 +71,6 @@
     padding: 25px;
     font-weight: 900;
     
-}
-
-.contenido-tarjetas h1:hover{
-    color: #c70f4d;
 }
 
 .container_card{
@@ -140,6 +103,7 @@
     height: 250px;
 }
 
+
 .card .contenido-card{
     padding: 15px;
     text-align: center;
@@ -163,6 +127,7 @@
     border: 1px solid #2fb4cc;
     border-radius: 4px;
     transition: all 400ms ease;
+    text-decoration: none;
 }
 
 .card .contenido-card a:hover{
@@ -170,6 +135,10 @@
     color: white;
 }
 
+
+.footer-column ul li a{
+    margin: 0 -30px;
+}
 /**Movimiento de la imagen**/
 /*
 @keyframes move_vector {
@@ -186,17 +155,23 @@
 
 /*RESPONSIVE*/
 @media screen and (max-width: 1100px){
+    .container__info{
+        margin: auto;
+    }
+
+    .container__cover{
+        margin: auto;
+        display: block;
+    }
     .container__vector{
+        padding: 10px;
         margin:  auto;
         width: 40%
     }
 }
 
-@media screen and (max-width: 960px){
-    .container__cover{
-        display: block;
-    }
 
+@media screen and (max-width: 960px){
     .container__info{
         margin: auto;
         max-width: 700px;
