actuaizacion de la pagina

--- a/css/general/menu.css
+++ b/css/general/menu.css
@@ -312,6 +312,12 @@ header .logo{
     }
 }
 
+@media screen and (max-width: 365px){
+    .footer{
+        width: 135%;
+    }
+}
+
 @media screen and (max-width: 360px){
     .footer{
         width: 140%;
