--- a/css/general/dark.css
+++ b/css/general/dark.css
@@ -1,5 +1,5 @@
 @import url("../inicio/inicio_dark.css");
-@import url("../nosotros/nosotros.css");
+@import url("../nosotros/nosotros_dark.css");
 
 #modo{
     font-size: 40px;
@@ -38,7 +38,7 @@
     background: #f5f5f5;
 }
 
-@media screen and (max-width: 795px){
+@media screen and (max-width: 800px){
     .dark .nav_menu{
         background: #3a3939;
         box-shadow: 1px 10px 10px 20px #ffffff11;
